--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<!-- <mat-toolbar>
   <h1 style="text-align:center">
     <span>  Bienvenido a {{ title }}</span>
   </h1>
@@ -11,7 +11,7 @@
   <a routerLink="/nuevopais">Agregar pais</a>
   <div>
     <mat-slider min="1" max="100" step="1" value="50"></mat-slider>
-    <router-outlet></router-outlet>
   </div>
-</div>
+</div> -->
 
+<router-outlet></router-outlet>
