--- a/src/app/ficha-clinica/pages/listado-ficha-clinica-page/listado-ficha-clinica-page.component.html
+++ b/src/app/ficha-clinica/pages/listado-ficha-clinica-page/listado-ficha-clinica-page.component.html
@@ -6,12 +6,23 @@
   </mat-card-header>
   <mat-card-content>
     <form [formGroup]="myForm">
-      <section>
+      <section
+        style="margin-bottom: 25px"
+        nfxLayout="row"
+        fxLayoutAlign="space-evenly center"
+      >
         <mat-form-field appearance="fill">
           <mat-label>Seleccionar una fecha de inicio</mat-label>
-          <input matInput [matDatepicker]="fromDate" formControlName="fromDate" />
+          <input
+            matInput
+            [matDatepicker]="fromDate"
+            formControlName="fromDate"
+          />
           <mat-hint>DD/MM/AAAA</mat-hint>
-          <mat-datepicker-toggle matSuffix [for]="fromDate"></mat-datepicker-toggle>
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="fromDate"
+          ></mat-datepicker-toggle>
           <mat-datepicker #fromDate></mat-datepicker>
         </mat-form-field>
 
@@ -19,12 +30,19 @@
           <mat-label>Seleccionar una fecha final</mat-label>
           <input formControlName="toDate" matInput [matDatepicker]="toDate" />
           <mat-hint>DD/MM/AAAA</mat-hint>
-          <mat-datepicker-toggle matSuffix [for]="toDate"></mat-datepicker-toggle>
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="toDate"
+          ></mat-datepicker-toggle>
           <mat-datepicker #toDate></mat-datepicker>
         </mat-form-field>
       </section>
 
-      <section>
+      <section
+        style="margin-bottom: 25px"
+        nfxLayout="row"
+        fxLayoutAlign="space-evenly center"
+      >
         <mat-form-field appearance="fill">
           <mat-label>Empleado</mat-label>
           <mat-select formControlName="empleado">
@@ -41,7 +59,12 @@
           </mat-select>
         </mat-form-field>
       </section>
-      <section>
+
+      <section
+        style="margin-bottom: 25px"
+        nfxLayout="row"
+        fxLayoutAlign="space-evenly center"
+      >
         <mat-form-field appearance="fill">
           <mat-label>Categoria</mat-label>
           <mat-select formControlName="categoria">
@@ -58,12 +81,12 @@
             <mat-option
               *ngFor="let item of subCategorias$ | async; let i = index"
               [value]="item.idTipoProducto"
-
               >{{ item.descripcion }}</mat-option
             >
           </mat-select>
         </mat-form-field>
       </section>
+
       <section nfxLayout="row" fxLayoutAlign="center center">
         <button (click)="buscar()" mat-raised-button color="primary">
           Buscar
@@ -72,3 +95,39 @@
     </form>
   </mat-card-content>
 </mat-card>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="fichasClinicas$">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Weight </th>
+      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef> Symbol </th>
+      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
+</div>
