--- a/src/app/features/ficha-clinica/pages/listado-ficha-clinica-page/listado-ficha-clinica-page.component.html
+++ b/src/app/features/ficha-clinica/pages/listado-ficha-clinica-page/listado-ficha-clinica-page.component.html
@@ -1,133 +1,155 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>
-      <h1>Filtros</h1>
-    </mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <form [formGroup]="myForm">
-      <section
-        style="margin-bottom: 25px"
-        nfxLayout="row"
-        fxLayoutAlign="space-evenly center"
-      >
-        <mat-form-field appearance="fill">
-          <mat-label>Seleccionar una fecha de inicio</mat-label>
-          <input
-            matInput
-            [matDatepicker]="fromDate"
-            formControlName="fromDate"
-          />
-          <mat-hint>DD/MM/AAAA</mat-hint>
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="fromDate"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #fromDate></mat-datepicker>
-        </mat-form-field>
+<div
+  style="
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  "
+  class="p-grid"
+>
+  <form class="p-col-12 p-md-12 p-lg-3" [formGroup]="myForm">
+    <section>
+      <mat-form-field style="width: 100%" appearance="fill">
+        <mat-label>Seleccionar una fecha de inicio</mat-label>
+        <input matInput [matDatepicker]="fromDate" formControlName="fromDate" />
+        <mat-hint>DD/MM/AAAA</mat-hint>
+        <mat-datepicker-toggle
+          matSuffix
+          [for]="fromDate"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #fromDate></mat-datepicker>
+      </mat-form-field>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Seleccionar una fecha final</mat-label>
-          <input formControlName="toDate" matInput [matDatepicker]="toDate" />
-          <mat-hint>DD/MM/AAAA</mat-hint>
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="toDate"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #toDate></mat-datepicker>
-        </mat-form-field>
-      </section>
+      <mat-form-field style="width: 100%" appearance="fill">
+        <mat-label>Seleccionar una fecha final</mat-label>
+        <input formControlName="toDate" matInput [matDatepicker]="toDate" />
+        <mat-hint>DD/MM/AAAA</mat-hint>
+        <mat-datepicker-toggle matSuffix [for]="toDate"></mat-datepicker-toggle>
+        <mat-datepicker #toDate></mat-datepicker>
+      </mat-form-field>
+    </section>
 
-      <section
-        style="margin-bottom: 25px"
-        nfxLayout="row"
-        fxLayoutAlign="space-evenly center"
-      >
-        <mat-form-field appearance="fill">
-          <mat-label>Empleado</mat-label>
-          <mat-select formControlName="empleado">
-            <mat-option value="empleado1">Empleado 1</mat-option>
-            <mat-option value="empleado2">Empleado 2</mat-option>
-          </mat-select>
-        </mat-form-field>
+    <section>
+      <mat-form-field style="width: 100%" appearance="fill">
+        <mat-label>Empleado</mat-label>
+        <mat-select formControlName="empleado">
+          <mat-option
+            *ngFor="let item of usuarios$ | async; let i = index"
+            [value]="item.idPersona"
+          >
+            {{ item.nombre }} {{ item.apellido }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Cliente</mat-label>
-          <mat-select formControlName="cliente">
-            <mat-option value="cliente1">Cliente 1</mat-option>
-            <mat-option value="cliente2">Cliente 2</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </section>
+      <mat-form-field style="width: 100%" appearance="fill">
+        <mat-label>Cliente</mat-label>
+        <mat-select formControlName="cliente">
+          <mat-option
+            *ngFor="let item of usuarios$ | async; let i = index"
+            [value]="item.idPersona"
+          >
+            {{ item.nombre }} {{ item.apellido }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </section>
 
-      <section
-        style="margin-bottom: 25px"
-        nfxLayout="row"
-        fxLayoutAlign="space-evenly center"
-      >
-        <mat-form-field appearance="fill">
-          <mat-label>Categoria</mat-label>
-          <mat-select formControlName="categoria">
-            <mat-option
-              *ngFor="let item of categorias$ | async; let i = index"
-              [value]="item.idCategoria"
-              >{{ item.descripcion }}</mat-option
-            >
-          </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Subcategoria</mat-label>
-          <mat-select formControlName="subcategoria">
-            <mat-option
-              *ngFor="let item of subCategorias$ | async; let i = index"
-              [value]="item.idTipoProducto"
-              >{{ item.descripcion }}</mat-option
-            >
-          </mat-select>
-        </mat-form-field>
-      </section>
+    <section>
+      <mat-form-field style="width: 100%" appearance="fill">
+        <mat-label>Categoria</mat-label>
+        <mat-select formControlName="categoria">
+          <mat-option
+            *ngFor="let item of categorias$ | async; let i = index"
+            [value]="item.idCategoria"
+            >{{ item.descripcion }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field style="width: 100%" appearance="fill">
+        <mat-label>Subcategoria</mat-label>
+        <mat-select formControlName="subcategoria">
+          <mat-option
+            *ngFor="let item of subCategorias$ | async; let i = index"
+            [value]="item.idTipoProducto"
+            >{{ item.descripcion }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+    </section>
 
-      <section nfxLayout="row" fxLayoutAlign="center center">
-        <button (click)="buscar()" mat-raised-button color="primary">
-          Buscar
-        </button>
-      </section>
-    </form>
-  </mat-card-content>
-</mat-card>
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="fichasClinicas$">
+    <section style="display: flex; justify-content: center">
+      <button (click)="applyFilter()" mat-raised-button color="primary">
+        Buscar
+      </button>
+      <button (click)="reset()" mat-raised-button color="danger">
+        Resetear
+      </button>
+    </section>
+  </form>
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
+  <div class="mat-elevation-z8 p-col-12 p-md-12 p-lg-9">
+    <table mat-table [dataSource]="matTableDataSource">
+      <ng-container matColumnDef="fecha">
+        <th mat-header-cell *matHeaderCellDef>Fecha</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.fechaHora | date: "medium" }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="profesional">
+        <th mat-header-cell *matHeaderCellDef>Profesional</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.idEmpleado.nombre }} {{ element.idEmpleado.apellido }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="cliente">
+        <th mat-header-cell *matHeaderCellDef>Cliente</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.idCliente.nombre }} {{ element.idCliente.apellido }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="categoria">
+        <th mat-header-cell *matHeaderCellDef>Categoria</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.idTipoProducto.idCategoria.descripcion }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="subcategoria">
+        <th mat-header-cell *matHeaderCellDef>SubCategoria</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.idTipoProducto.descripcion }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Example home icon"
+            fontIcon="add"
+          ></mat-icon>
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Example home icon"
+            fontIcon="edit"
+          ></mat-icon>
+        </td>
+      </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+          No se encontraron datos para el filtro.
+        </td>
+      </tr>
+    </table>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of periodic elements">
-  </mat-paginator>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+    >
+    </mat-paginator>
+  </div>
 </div>
