--- a/src/app/features/ficha-clinica/pages/listado-ficha-clinica-page/listado-ficha-clinica-page.component.html
+++ b/src/app/features/ficha-clinica/pages/listado-ficha-clinica-page/listado-ficha-clinica-page.component.html
@@ -126,12 +126,8 @@
           <mat-icon
             aria-hidden="false"
             aria-label="Example home icon"
-            fontIcon="add"
-          ></mat-icon>
-          <mat-icon
-            aria-hidden="false"
-            aria-label="Example home icon"
             fontIcon="edit"
+            (click)="openDialog(true, element)"
           ></mat-icon>
         </td>
       </ng-container>
@@ -151,5 +147,10 @@
       aria-label="Select page of periodic elements"
     >
     </mat-paginator>
+    <section>
+      <button (click)="openDialog(false)" mat-raised-button color="primary">
+        Agregar
+      </button>
+    </section>
   </div>
 </div>
