Agregamos el nav bar-side bar para la navegacion

--- a/src/app/features/ficha-clinica/pages/listado-ficha-clinica-page/listado-ficha-clinica-page.component.html
+++ b/src/app/features/ficha-clinica/pages/listado-ficha-clinica-page/listado-ficha-clinica-page.component.html
@@ -129,6 +129,12 @@
             fontIcon="edit"
             (click)="openDialog(true, element)"
           ></mat-icon>
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Example home icon"
+            fontIcon="delete"
+            (click)="deleteElement(element)"
+          ></mat-icon>
         </td>
       </ng-container>
 
