--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,30 @@
-<!-- <mat-toolbar>
-  <h1 style="text-align:center">
-    <span>  Bienvenido a {{ title }}</span>
-  </h1>
-</mat-toolbar>
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" class="example-toolbar">
+    <button mat-icon-button (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1 class="example-app-name">Fisioterapia Sin Piernas</h1>
+  </mat-toolbar>
 
+  <mat-sidenav-container
+    class="example-sidenav-container"
+    [style.marginTop.px]="mobileQuery.matches ? 56 : 0"
+  >
+    <mat-sidenav
+      #snav
+      [mode]="mobileQuery.matches ? 'over' : 'side'"
+      [fixedInViewport]="mobileQuery.matches"
+      fixedTopGap="56"
+    >
+      <mat-nav-list>
+        <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav">
+          <mat-icon class="mat-icon-rtl-mirror" [svgIcon]="nav.icon"></mat-icon> {{ nav.title }}</a
+        >
+      </mat-nav-list>
+    </mat-sidenav>
 
-<div style="text-align:center">
-  <a routerLink="/pais">Lista de paises</a>
-  <br/>
-  <a routerLink="/nuevopais">Agregar pais</a>
-  <div>
-    <mat-slider min="1" max="100" step="1" value="50"></mat-slider>
-  </div>
-</div> -->
-
-<router-outlet></router-outlet>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
