--- a/src/app/reserva/pages/reservas/reservas.component.html
+++ b/src/app/reserva/pages/reservas/reservas.component.html
@@ -98,6 +98,11 @@
                    showFirstLastButtons
                    aria-label="Select page of periodic elements">
     </mat-paginator>
+    <section>
+      <button (click)="openDialog(false)" mat-raised-button color="primary">
+        Agregar
+      </button>
+    </section>
   </div>
 
 
