Agregamos el dialogo para cerrar sesion

--- a/src/app/shared/components/edit-dialog/edit-dialog.component.html
+++ b/src/app/shared/components/edit-dialog/edit-dialog.component.html
@@ -88,6 +88,6 @@
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancelar</button>
   <button mat-button (click)="editFichaClinica()" cdkFocusInitial>
-    Actualizars
+    Actualizar
   </button>
 </div>
