--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,10 @@
     >
       <mat-nav-list>
         <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav">
-          <mat-icon class="mat-icon-rtl-mirror" [svgIcon]="nav.icon"></mat-icon> {{ nav.title }}</a
+          <mat-icon>{{nav.icon}}</mat-icon> {{ nav.title }}</a
+        >
+        <a (click)="openDialog('500ms', '500ms')" mat-list-item>
+          <mat-icon>logout</mat-icon> Cerrar Sesion</a
         >
       </mat-nav-list>
     </mat-sidenav>
