--- a/src/app/features/crear-modificar-servicio/crear-modificar-servicio.component.html
+++ b/src/app/features/crear-modificar-servicio/crear-modificar-servicio.component.html
@@ -15,32 +15,124 @@
 			</mat-form-field>
 		</section>
 		<section>
-				<mat-form-field class="observacion" appearance="fill" style="padding: 20px;">
-					<input matInput placeholder="Observación">
-				</mat-form-field>
+			<mat-form-field class="observacion" appearance="fill" style="padding: 20px;">
+				<input matInput placeholder="Observación">
+			</mat-form-field>
 		</section>
 		<section>
 			<mat-form-field style="width: 100%" appearance="fill">
 				<mat-label>Empleado</mat-label>
 				<mat-select formControlName="empleado">
-				  <mat-option
-					*ngFor="let item of usuarios$ | async; let i = index"
-					[value]="item.idPersona"
-				  >
-					{{ item.nombre }} {{ item.apellido }}
-				  </mat-option>
+					<mat-option *ngFor="let item of usuarios$ | async; let i = index" [value]="item.idPersona">
+						{{ item.nombre }} {{ item.apellido }}
+					</mat-option>
 				</mat-select>
-			  </mat-form-field>
-		
-			  <mat-form-field style="width: 100%" appearance="fill">
+			</mat-form-field>
+
+			<mat-form-field style="width: 100%" appearance="fill">
 				<mat-label>Cliente</mat-label>
 				<mat-select formControlName="cliente">
-				  <mat-option
-					*ngFor="let item of usuarios$ | async; let i = index"
-					[value]="item.idPersona"
-				  >
-					{{ item.nombre }} {{ item.apellido }}
-				  </mat-option>
+					<mat-option *ngFor="let item of usuarios$ | async; let i = index" [value]="item.idPersona">
+						{{ item.nombre }} {{ item.apellido }}
+					</mat-option>
 				</mat-select>
+			</mat-form-field>
+		</section>
+
+		<section>
+			<div class="mat-elevation-z8 p-col-12 p-md-12 p-lg-9">
+				<table mat-table [dataSource]="matTableDataSource">
+					<ng-container matColumnDef="fecha">
+						<th mat-header-cell *matHeaderCellDef>Fecha</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.fechaHora | date: "medium" }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="profesional">
+						<th mat-header-cell *matHeaderCellDef>Profesional</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.idEmpleado.nombre }} {{ element.idEmpleado.apellido }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="cliente">
+						<th mat-header-cell *matHeaderCellDef>Cliente</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.idCliente.nombre }} {{ element.idCliente.apellido }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="categoria">
+						<th mat-header-cell *matHeaderCellDef>Categoria</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.idTipoProducto.idCategoria.descripcion }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="subcategoria">
+						<th mat-header-cell *matHeaderCellDef>SubCategoria</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.idTipoProducto.descripcion }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="acciones">
+						<th mat-header-cell *matHeaderCellDef>Acciones</th>
+						<td mat-cell *matCellDef="let element">
+							<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="edit"></mat-icon>
+							<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="delete"></mat-icon>
+						</td>
+					</ng-container>
+
+					<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+					<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+					<tr class="mat-row" *matNoDataRow>
+						<td class="mat-cell" [attr.colspan]="displayedColumns.length">
+							No se encontraron datos para el filtro.
+						</td>
+					</tr>
+				</table>
+				<mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons
+					aria-label="Select page of periodic elements">
+				</mat-paginator>
+				<button mat-raised-button color="primary">
+					Guardar
+				</button>
+			</div>
+		</section>
+		<section style="padding-top: 20px;">
+			<mat-card-title>Detalles</mat-card-title>
+		</section>
+		<section>
+			<mat-form-field style="width: 100%" appearance="fill">
+				<mat-label>Categoria</mat-label>
+				<mat-select formControlName="empleado">
+					<mat-option *ngFor="let item of usuarios$ | async; let i = index" [value]="item.idPersona">
+						{{ item.nombre }} {{ item.apellido }}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
+		</section>
+		<section>
+			<mat-form-field style="width: 100%" appearance="fill">
+				<mat-label>Subcategoría (tipo de producto)</mat-label>
+				<mat-select formControlName="empleado">
+					<mat-option *ngFor="let item of usuarios$ | async; let i = index" [value]="item.idPersona">
+						{{ item.nombre }} {{ item.apellido }}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
+		</section>
+		<section>
+			<mat-form-field style="width: 100%" appearance="fill">
+				<mat-label>Tipo de servicio (presentación)</mat-label>
+				<mat-select formControlName="empleado">
+					<mat-option *ngFor="let item of usuarios$ | async; let i = index" [value]="item.idPersona">
+						{{ item.nombre }} {{ item.apellido }}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
+		</section>
+		<section>
+			<mat-form-field appearance="fill">
+				<input matInput disabled value="precio">
 			  </mat-form-field>
 		</section>
+	</form>
+</div>
