--- a/src/app/features/crear-modificar-servicio/crear-modificar-servicio.component.html
+++ b/src/app/features/crear-modificar-servicio/crear-modificar-servicio.component.html
@@ -1,10 +1,5 @@
-<div style="
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  " class="p-grid">
-	<form class="p-col-12 p-md-12 p-lg-3" [formGroup]="myForm">
+<div>
+	<form [formGroup]="myForm">
 		<section>
 			<mat-form-field appearance="fill" style="padding: 20px;">
 				<mat-label>Fecha</mat-label>
@@ -42,48 +37,35 @@
 		<section>
 			<div class="mat-elevation-z8 p-col-12 p-md-12 p-lg-9">
 				<table mat-table [dataSource]="matTableDataSource">
-					<ng-container matColumnDef="fecha">
-						<th mat-header-cell *matHeaderCellDef>Fecha</th>
+					<ng-container matColumnDef="idficha">
+						<th mat-header-cell *matHeaderCellDef>Id ficha</th>
 						<td mat-cell *matCellDef="let element">
 							{{ element.fechaHora | date: "medium" }}
 						</td>
 					</ng-container>
-					<ng-container matColumnDef="profesional">
-						<th mat-header-cell *matHeaderCellDef>Profesional</th>
+					<ng-container matColumnDef="fechacategoria">
+						<th mat-header-cell *matHeaderCellDef>Fecha Categoria</th>
 						<td mat-cell *matCellDef="let element">
 							{{ element.idEmpleado.nombre }} {{ element.idEmpleado.apellido }}
 						</td>
 					</ng-container>
-					<ng-container matColumnDef="cliente">
-						<th mat-header-cell *matHeaderCellDef>Cliente</th>
+					<ng-container matColumnDef="subcategoria">
+						<th mat-header-cell *matHeaderCellDef>Subcategoria</th>
 						<td mat-cell *matCellDef="let element">
 							{{ element.idCliente.nombre }} {{ element.idCliente.apellido }}
-						</td>
-					</ng-container>
-					<ng-container matColumnDef="categoria">
-						<th mat-header-cell *matHeaderCellDef>Categoria</th>
-						<td mat-cell *matCellDef="let element">
-							{{ element.idTipoProducto.idCategoria.descripcion }}
-						</td>
-					</ng-container>
-					<ng-container matColumnDef="subcategoria">
-						<th mat-header-cell *matHeaderCellDef>SubCategoria</th>
-						<td mat-cell *matCellDef="let element">
-							{{ element.idTipoProducto.descripcion }}
 						</td>
 					</ng-container>
 					<ng-container matColumnDef="acciones">
 						<th mat-header-cell *matHeaderCellDef>Acciones</th>
 						<td mat-cell *matCellDef="let element">
-							<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="edit"></mat-icon>
-							<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="delete"></mat-icon>
+							{{ element.idTipoProducto.idCategoria.descripcion }}
 						</td>
 					</ng-container>
 
-					<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-					<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+					<tr mat-header-row *matHeaderRowDef="displayedColumnsService"></tr>
+					<tr mat-row *matRowDef="let row; columns: displayedColumnsService"></tr>
 					<tr class="mat-row" *matNoDataRow>
-						<td class="mat-cell" [attr.colspan]="displayedColumns.length">
+						<td class="mat-cell" [attr.colspan]="displayedColumnsService.length">
 							No se encontraron datos para el filtro.
 						</td>
 					</tr>
@@ -133,6 +115,71 @@
 			<mat-form-field appearance="fill">
 				<input matInput disabled value="precio">
 			  </mat-form-field>
+		</section>
+		<section>
+			<mat-form-field appearance="fill">
+				<input matInput value="Cantidad">
+			  </mat-form-field>
+		</section>
+		<button mat-raised-button color="primary">
+			Agregar detalle
+		</button>
+		<section>
+			<div class="mat-elevation-z8 p-col-12 p-md-12 p-lg-9">
+				<table mat-table [dataSource]="matTableDataSource">
+					<ng-container matColumnDef="iddetalle">
+						<th mat-header-cell *matHeaderCellDef>Id detalle</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.fechaHora | date: "medium" }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="presentacion">
+						<th mat-header-cell *matHeaderCellDef>Presentación</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.idEmpleado.nombre }} {{ element.idEmpleado.apellido }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="preciounitario">
+						<th mat-header-cell *matHeaderCellDef>Precio Unitario</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.idCliente.nombre }} {{ element.idCliente.apellido }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="cantidad">
+						<th mat-header-cell *matHeaderCellDef>cantidad</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.idTipoProducto.idCategoria.descripcion }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="total">
+						<th mat-header-cell *matHeaderCellDef>total</th>
+						<td mat-cell *matCellDef="let element">
+							{{ element.idTipoProducto.descripcion }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="acciones">
+						<th mat-header-cell *matHeaderCellDef>Acciones</th>
+						<td mat-cell *matCellDef="let element">
+							<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="edit"></mat-icon>
+							<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="delete"></mat-icon>
+						</td>
+					</ng-container>
+
+					<tr mat-header-row *matHeaderRowDef="displayedColumnsDetalle"></tr>
+					<tr mat-row *matRowDef="let row; columns: displayedColumnsDetalle"></tr>
+					<tr class="mat-row" *matNoDataRow>
+						<td class="mat-cell" [attr.colspan]="displayedColumnsDetalle.length">
+							No se encontraron datos para el filtro.
+						</td>
+					</tr>
+				</table>
+				<mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons
+					aria-label="Select page of periodic elements">
+				</mat-paginator>
+			</div>
+			<button mat-raised-button color="primary">
+				Cancelar
+			</button>
 		</section>
 	</form>
 </div>
