--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -26,6 +26,8 @@
       </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav-content> </mat-sidenav-content>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
