--- a/src/app/features/reserva/pages/reservas/reservas.component.html
+++ b/src/app/features/reserva/pages/reservas/reservas.component.html
@@ -85,8 +85,8 @@
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-raised-button color="warn">Cancelar</button>
-          <button mat-raised-button color="primary">Modificar</button>
+          <button (click)="deleteReserva(element.idReserva)"  mat-raised-button color="warn">Cancelar</button>
+          <button  (click)="openDialog(true, element)" mat-raised-button color="primary">Modificar</button>
           <button (click)="openDialogFicha(element)"  mat-raised-button>Nueva Ficha</button>
         </td>
       </ng-container>
