--- a/src/app/shared/components/add-categoria-dialog/add-categoria-dialog.component.html
+++ b/src/app/shared/components/add-categoria-dialog/add-categoria-dialog.component.html
@@ -2,17 +2,13 @@
 <div mat-dialog-content class="mat-typography">
   <p>Ingrese los datos</p>
   <form [formGroup]="myForm">
-    <mat-form-field ngDefaultControl formControlName="id" appearance="fill">
+    <mat-form-field ngDefaultControl appearance="fill">
       <mat-label>ID</mat-label>
-      <input matInput readonly />
+      <input matInput formControlName="id" />
     </mat-form-field>
-    <mat-form-field
-      ngDefaultControl
-      formControlName="descripcion"
-      appearance="fill"
-    >
+    <mat-form-field appearance="fill">
       <mat-label>Descripcion</mat-label>
-      <input matInput />
+      <input matInput ngDefaultControl formControlName="descripcion" />
     </mat-form-field>
   </form>
 </div>
