--- a/src/app/shared/pages/sub-categoria-page/sub-categoria-page.component.html
+++ b/src/app/shared/pages/sub-categoria-page/sub-categoria-page.component.html
@@ -15,7 +15,7 @@
 
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element; let i = index">
         <mat-icon
           aria-hidden="false"
           aria-label="Example home icon"
@@ -26,7 +26,7 @@
           aria-hidden="false"
           aria-label="Example home icon"
           fontIcon="delete"
-          (click)="deleteElement(element)"
+          (click)="deleteElement(i)"
         ></mat-icon>
       </td>
     </ng-container>
