--- a/src/app/shared/components/add-categoria-dialog/add-categoria-dialog.component.html
+++ b/src/app/shared/components/add-categoria-dialog/add-categoria-dialog.component.html
@@ -2,13 +2,12 @@
 <div mat-dialog-content class="mat-typography">
   <p>Ingrese los datos</p>
   <form [formGroup]="myForm">
-    <mat-form-field ngDefaultControl appearance="fill">
-      <mat-label>ID</mat-label>
-      <input matInput formControlName="id" />
-    </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Descripcion</mat-label>
       <input matInput ngDefaultControl formControlName="descripcion" />
+      <mat-error *ngIf="myForm.get('descripcion')!.hasError('required')">
+        Descripcion es requerido
+      </mat-error>
     </mat-form-field>
   </form>
 </div>
