--- a/src/app/shared/components/edit-categoria-dialog/edit-categoria-dialog.component.html
+++ b/src/app/shared/components/edit-categoria-dialog/edit-categoria-dialog.component.html
@@ -2,17 +2,22 @@
 <div mat-dialog-content class="mat-typography">
   <p>Ingrese los datos</p>
   <form [formGroup]="myForm">
-    <mat-form-field ngDefaultControl formControlName="id" appearance="fill">
+    <mat-form-field appearance="fill">
       <mat-label>ID</mat-label>
-      <input matInput readonly />
+      <input matInput readonly ngDefaultControl formControlName="id" />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Descripcion</mat-label>
       <input matInput ngDefaultControl formControlName="descripcion" />
+      <mat-error *ngIf="myForm.get('descripcion')!.hasError('required')">
+        Descripcion es requerido
+      </mat-error>
     </mat-form-field>
   </form>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button (click)="addCategoria()" cdkFocusInitial>Agregar</button>
+  <button mat-button (click)="editCategoria()" cdkFocusInitial>
+    Modificar
+  </button>
 </div>
