--- a/src/app/shared/pages/sub-categoria-page/sub-categoria-page.component.html
+++ b/src/app/shared/pages/sub-categoria-page/sub-categoria-page.component.html
@@ -26,7 +26,7 @@
           aria-hidden="false"
           aria-label="Example home icon"
           fontIcon="delete"
-          (click)="deleteElement(i)"
+          (click)="deleteElement(element)"
         ></mat-icon>
       </td>
     </ng-container>
