--- a/src/app/features/admin-servicios/pages/productos/productos.component.html
+++ b/src/app/features/admin-servicios/pages/productos/productos.component.html
@@ -1,1 +1,104 @@
-<p>productos works!</p>
+<div
+  style="
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  "
+  class="p-grid"
+>
+  <form class="p-col-12 p-md-12 p-lg-3" [formGroup]="myForm">
+    <section>
+      <!-- Input text -->
+      <mat-form-field style="width: 100%" appearance="fill">
+        <mat-label>Ingresar nombre</mat-label>
+        <input matInput ngDefaultControl formControlName="nombre" />
+      </mat-form-field>
+      <mat-form-field style="width: 100%" appearance="fill">
+        <mat-label>Subcategoria</mat-label>
+        <mat-select formControlName="subcategoria">
+          <mat-option
+            *ngFor="let item of subCategorias$ | async; let i = index"
+            [value]="item.idTipoProducto"
+            >{{ item.descripcion }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+    </section>
+
+    <section style="display: flex; justify-content: center">
+      <button (click)="applyFilter()" mat-raised-button color="primary">
+        Buscar
+      </button>
+      <button (click)="reset()" mat-raised-button color="danger">
+        Resetear
+      </button>
+    </section>
+  </form>
+
+  <div class="mat-elevation-z8 p-col-12 p-md-12 p-lg-9">
+    <table mat-table [dataSource]="matTableDataSource">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.idPresentacionProducto }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.nombre }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="descripcion">
+        <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.descripcion }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="subcategoria">
+        <th mat-header-cell *matHeaderCellDef>Subcategoria</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.idProducto.idTipoProducto.descripcion }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Example home icon"
+            fontIcon="edit"
+            (click)="openDialog(true, element)"
+          ></mat-icon>
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Example home icon"
+            fontIcon="delete"
+            (click)="deleteElement(element)"
+          ></mat-icon>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+          No se encontraron datos para el filtro.
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+    >
+    </mat-paginator>
+    <section>
+      <button (click)="openDialog(false)" mat-raised-button color="primary">
+        Agregar
+      </button>
+    </section>
+  </div>
+</div>
