--- a/src/app/features/pacientes/pages/pacientes-page/pacientes-page.component.html
+++ b/src/app/features/pacientes/pages/pacientes-page/pacientes-page.component.html
@@ -75,6 +75,12 @@
           {{ element.cedula }}
         </td>
       </ng-container>
+      <ng-container matColumnDef="fechaNacimiento">
+        <th mat-header-cell *matHeaderCellDef>Fecha Nacimiento</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.fechaNacimiento | date: 'dd/MM/yyyy' }}
+        </td>
+      </ng-container>
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let element; let i = index">
